# simple_coding_agent

./: .gitignore  README.md  animation.py  bug_fixes_summary.txt  coding_agent.py  main.py  prompts.py  pyproject.toml  response.txt  tools.py  ui.py
src/agent/: coding_agent.py  context_manager.py  main.py  prompts.py  ui.py
src/agent/storage/: queries.py
storage/: db.py  queries.py
tests/: test_main.py  test_resume.py  test_tools.py
